--- a/affinitic/skin/TODO.txt
+++ b/affinitic/skin/TODO.txt
@@ -1,4 +1,3 @@
- - utiliser plone.app.themingplugins
- - faire un répertoire static
- - nettoyer le package
- - gérer la CSS statique via Plone
+ - transformer les blobs
+ - terminer la homepage
+ - peaufiner les styles (textes, etc)
